<resources>
    <string name="app_name">Accounting_app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="setting_fragment_label">Setting Fragment</string>
    <string name="addbill_fragment_label">Addbill Fragment</string>
    <string name="single_bill_info_label">SingleBillInfo Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>