<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.accounting_app.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingFragment"
            app:destination="@id/SettingFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_AddbillFragment"
            app:destination="@id/AddbillFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SingleBillInfoFragment"
            app:destination="@id/SingleBillInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.accounting_app.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingFragment"
        android:name="com.example.accounting_app.SettingFragment"
        android:label="@string/setting_fragment_label"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_SettingFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/AddbillFragment"
        android:name="com.example.accounting_app.AddbillFragment"
        android:label="@string/addbill_fragment_label"
        tools:layout="@layout/fragment_addbill">
        <action
            android:id="@+id/action_AddbillFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/SingleBillInfoFragment"
        android:name="com.example.accounting_app.SingleBillInfoFragment"
        android:label="@string/single_bill_info_label"
        tools:layout="@layout/fragment_single_bill_info">
        <action
            android:id="@+id/action_SingleBillInfoFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>